--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "private": true,
   "dependencies": {
+    "@ampproject/remapping": "^2.2.1",
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.4",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
